--- a/MRtoCT.ipynb
+++ b/MRtoCT.ipynb
@@ -1166,12 +1166,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "huz9JjP40aP8",
-        "outputId": "18a83a28-6d2e-4fd2-a715-db37222e085c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
-        }
+        },
+        "id": "huz9JjP40aP8",
+        "outputId": "18a83a28-6d2e-4fd2-a715-db37222e085c"
       },
       "execution_count": 15,
       "outputs": [
@@ -1243,24 +1243,33 @@
         "    def __init__(self, in_channels=1):\n",
         "        super(Discriminator, self).__init__()\n",
         "        self.model = nn.Sequential(\n",
-        "            nn.Conv2d(in_channels, 64, kernel_size=4, stride=2, padding=1),\n",
+        "            nn.Conv2d(in_channels, 64, kernel_size=4, stride=2, padding=1),  # 128x128 -> 64x64\n",
         "            nn.LeakyReLU(0.2, inplace=True),\n",
-        "            nn.Conv2d(64, 128, kernel_size=4, stride=2, padding=1),\n",
+        "            nn.Conv2d(64, 128, kernel_size=4, stride=2, padding=1),  # 64x64 -> 32x32\n",
         "            nn.InstanceNorm2d(128),\n",
         "            nn.LeakyReLU(0.2, inplace=True),\n",
-        "            nn.Conv2d(128, 256, kernel_size=4, stride=2, padding=1),\n",
+        "            nn.Conv2d(128, 256, kernel_size=4, stride=2, padding=1),  # 32x32 -> 16x16\n",
         "            nn.InstanceNorm2d(256),\n",
         "            nn.LeakyReLU(0.2, inplace=True),\n",
-        "            nn.Conv2d(256, 512, kernel_size=4, stride=1, padding=1),\n",
+        "            nn.Conv2d(256, 512, kernel_size=4, stride=2, padding=1),  # 16x16 -> 8x8\n",
         "            nn.InstanceNorm2d(512),\n",
         "            nn.LeakyReLU(0.2, inplace=True),\n",
-        "            nn.Conv2d(512, 1, kernel_size=4, stride=1, padding=1),\n",
+        "            nn.Conv2d(512, 1, kernel_size=4, stride=1, padding=1),  # 8x8 -> 8x8\n",
         "            nn.Sigmoid()\n",
         "        )\n",
         "\n",
         "    def forward(self, x):\n",
-        "        return self.model(x)\n",
-        "\n",
+        "        return self.model(x)"
+      ],
+      "metadata": {
+        "id": "WDF9fCKV0fCJ"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Initialize discriminators\n",
         "D_app_ct = Discriminator(in_channels=1).to(device)  # Appearance discriminator for CT domain\n",
         "D_str_ct = Discriminator(in_channels=2).to(device)  # Structure discriminator (MRI + CT)\n",
@@ -1268,9 +1277,22 @@
         "D_str_mri = Discriminator(in_channels=2).to(device)  # Structure discriminator (CT + MRI)"
       ],
       "metadata": {
-        "id": "WDF9fCKV0fCJ"
+        "id": "Wmci_qS402sh"
       },
-      "execution_count": 17,
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Labels with smoothing\n",
+        "real_label = torch.full((batch_size, 1, 8, 8), 0.9).to(device)\n",
+        "fake_label = torch.full((batch_size, 1, 8, 8), 0.1).to(device)"
+      ],
+      "metadata": {
+        "id": "HacwYyLL044m"
+      },
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1410,28 +1432,28 @@
         "    torch.save(G_mri_to_ct.state_dict(), f'CycleSGAN_G_mri_to_ct_epoch_{epoch+1}.pth')"
       ],
       "metadata": {
-        "id": "-7gfHQV-0jJq",
-        "outputId": "19f65026-b7d3-4162-dfaa-47775819a12b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 356
-        }
+        },
+        "id": "-7gfHQV-0jJq",
+        "outputId": "75de1040-2023-4e7a-fae9-eb5e75088180"
       },
-      "execution_count": 19,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "error",
           "ename": "ValueError",
-          "evalue": "Using a target size (torch.Size([4, 1, 8, 8])) that is different to the input size (torch.Size([4, 1, 14, 14])) is deprecated. Please ensure they have the same size.",
+          "evalue": "Using a target size (torch.Size([4, 1, 8, 8])) that is different to the input size (torch.Size([4, 1, 7, 7])) is deprecated. Please ensure they have the same size.",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-19-332af3e8f7d0>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0mreal_pred_app_ct\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mD_app_ct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreal_ct\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0mfake_pred_app_ct\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mD_app_ct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfake_ct\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m         \u001b[0mloss_D_app_ct\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0madversarial_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreal_pred_app_ct\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreal_label\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0madversarial_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfake_pred_app_ct\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfake_label\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0;31m# Appearance Discriminator (MRI domain)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-23-332af3e8f7d0>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0mreal_pred_app_ct\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mD_app_ct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreal_ct\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0mfake_pred_app_ct\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mD_app_ct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfake_ct\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m         \u001b[0mloss_D_app_ct\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0madversarial_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreal_pred_app_ct\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreal_label\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0madversarial_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfake_pred_app_ct\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfake_label\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0;31m# Appearance Discriminator (MRI domain)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1737\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_compiled_call_impl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore[misc]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1738\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1739\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_call_impl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1740\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1741\u001b[0m     \u001b[0;31m# torchrec tests the code consistency with the following code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1748\u001b[0m                 \u001b[0;32mor\u001b[0m \u001b[0m_global_backward_pre_hooks\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0m_global_backward_hooks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1749\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1750\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1751\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1752\u001b[0m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/nn/modules/loss.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input, target)\u001b[0m\n\u001b[1;32m    697\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    698\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mTensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mTensor\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mTensor\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 699\u001b[0;31m         return F.binary_cross_entropy(\n\u001b[0m\u001b[1;32m    700\u001b[0m             \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    701\u001b[0m         )\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/nn/functional.py\u001b[0m in \u001b[0;36mbinary_cross_entropy\u001b[0;34m(input, target, weight, size_average, reduce, reduction)\u001b[0m\n\u001b[1;32m   3558\u001b[0m         \u001b[0mreduction_enum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3559\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3560\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m   3561\u001b[0m             \u001b[0;34mf\"Using a target size ({target.size()}) that is different to the input size ({input.size()}) is deprecated. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3562\u001b[0m             \u001b[0;34m\"Please ensure they have the same size.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Using a target size (torch.Size([4, 1, 8, 8])) that is different to the input size (torch.Size([4, 1, 14, 14])) is deprecated. Please ensure they have the same size."
+            "\u001b[0;31mValueError\u001b[0m: Using a target size (torch.Size([4, 1, 8, 8])) that is different to the input size (torch.Size([4, 1, 7, 7])) is deprecated. Please ensure they have the same size."
           ]
         }
       ]
